fixed max label length

--- a/Jupyter_Notebooks/LOCAL TorchScript Inference.ipynb
+++ b/Jupyter_Notebooks/LOCAL TorchScript Inference.ipynb
@@ -195,7 +195,7 @@
     "# Load with pytorch epoch=4-step=17280.ckpt\n",
     "\n",
     "model = ResNetTransformer(dataset=dataset).to(dev)\n",
-    "model.load_state_dict(torch.load((\"Models_Parameters_Log/Printed3_2D600_350_pre.pth\"), map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load((\"Models_Parameters_Log/Collate1.pth\"), map_location=torch.device('cpu')))\n",
     "lit_model = LitResNetTransformer(model=model, WandB=False)\n",
     "scripted = lit_model.to_torchscript()\n"
    ]
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "d376c1dc",
    "metadata": {},
    "outputs": [
@@ -251,14 +251,6 @@
      "output_type": "stream",
      "text": [
       "(800, 32)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/wc/60y8v25x3ns_jgsx6clbdb180000gn/T/ipykernel_35842/3840194321.py:19: DeprecationWarning: BILINEAR is deprecated and will be removed in Pillow 10 (2023-07-01). Use Resampling.BILINEAR instead.\n",
-      "  img_resize = image.resize((w_new, h_new), Image.BILINEAR)\n"
      ]
     },
     {
@@ -280,31 +272,35 @@
     }
    ],
    "source": [
-    "MAX_RATIO = 25\n",
+    "MAX_SIZE = 1920\n",
     "\n",
     "# Resize images with roughly the same aspect ratio\n",
     "# Resize height to 32 times the original, and width with roughly the same ratio but it must be divisible by 32\n",
     "\n",
     "\n",
     "\n",
-    "\n",
     "image_path= \"Jupyter_Notebooks/test_photos/zarhin.png\"\n",
     "image = Image.open(image_path).convert('RGB')\n",
     "w, h = image.size\n",
-    "ratio = round((w / h) * 3) \n",
-    "if ratio == 0:\n",
-    "    ratio = 1 \n",
-    "if ratio > MAX_RATIO:\n",
-    "    ratio = MAX_RATIO\n",
-    "h_new = 32\n",
-    "w_new = h_new * ratio\n",
-    "img_resize = image.resize((w_new, h_new), Image.BILINEAR)\n",
     "\n",
-    "# Do padding to the right half of the image so that the ratio remain fixed as self.max_ratio\n",
-    "img_padd = Image.new('RGB', (32*MAX_RATIO, 32), (0,0,0))\n",
-    "img_padd.paste(img_resize, (0, 0)) \n",
-    "print(img_padd.size)\n",
-    "print(display(img_padd))\n"
+    "if w>MAX_SIZE:\n",
+    "    ratio = int(h / w)\n",
+    "    new_w = 1920\n",
+    "    new_h = new_w*ratio\n",
+    "    img_resize = image.resize((w_new, h_new), Image.BILINEAR)\n",
+    "\n",
+    "image_tensor = Image_Transforms.test_transform_with_padding_xs(image=np.array(image))['image'][:1]    \n",
+    "\n",
+    "    \n",
+    "image_tensor = Image_Transforms.test_transform_with_padding(image=np.array(image))['image'][:1]\n",
+    "print(image_tensor.shape)\n",
+    "print(display(transform(image_tensor))) \n",
+    "\n",
+    "#prediction =  scripted_model(my_image_tensor.unsqueeze(0).to(dev))\n",
+    "print('\\nPredicted formula:')\n",
+    "prediction =  scripted(image_tensor.unsqueeze(0))\n",
+    "print(token_to_strings(prediction))\n",
+    "print(display(Math(token_to_strings(prediction))))\n"
    ]
   },
   {
