--- a/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
+++ b/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4d6c0ee3",
+   "id": "8f22c5fd",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3c5b9307",
+   "id": "32215168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "491bc1e1",
+   "id": "6674ff44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9f0bef65",
+   "id": "ef05b6be",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d7fafb18",
+   "id": "86cb8920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc32cd92",
+   "id": "8f1c955d",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f1fba44b",
+   "id": "39b28e26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9baf5c8e",
+   "id": "6574f863",
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +285,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682221f0",
+   "id": "7b88dd7a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "5fbae6c6",
+   "execution_count": 38,
+   "id": "a5351209",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "152 658 3\n",
       "64\n",
       "torch.Size([1, 64, 256])\n"
      ]
@@ -368,6 +369,7 @@
     "\n",
     "\n",
     "h, w, c = image.shape\n",
+    "print(h,w,c)\n",
     "\n",
     "ratio = int(w/h)\n",
     "h_new  = 64\n",
@@ -401,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "386e39f5",
+   "id": "7f3de985",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5011fbf7",
+   "id": "5f9dbe56",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fae46c79",
+   "id": "b11194e6",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "01c7fbe6",
+   "id": "beaa7bad",
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4616a22c",
+   "id": "eebaef8b",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5713072b",
+   "id": "728169ec",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b375a040",
+   "id": "dd06fa11",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1020,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e8b0e0a5",
+   "id": "0fb44668",
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fee8258",
+   "id": "50090138",
    "metadata": {},
    "outputs": [],
    "source": []
