--- a/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
+++ b/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5aeb1e3f",
+   "id": "42009d07",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ae198b14",
+   "id": "4536984f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "747803c7",
+   "id": "dec3402f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a6e130bb",
+   "id": "4756cff8",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a54b24c",
+   "id": "18717be5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1ccd4c3a",
+   "id": "416e49c6",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce3bbf95",
+   "id": "f7dab60a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "7f124b7c",
+   "id": "6fa65699",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "5d677909",
+   "id": "34dc25e4",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "0c8e005b",
+   "id": "fd8032c5",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2e9ae267",
+   "id": "7da57c6f",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "2374de6c",
+   "id": "a8c3baac",
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "d4ac3f51",
+   "id": "c702e9e5",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "c8aaf5c5",
+   "id": "0f9ab07d",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "9c10782c",
+   "id": "3abf5108",
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "5ad488fb",
+   "id": "7fd96993",
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "94bfb90a",
+   "id": "aa6bc25b",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "4d70fdee",
+   "id": "7a533919",
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1282,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "9fc67ddb",
+   "id": "def6c053",
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "991883ea",
+   "id": "4069aae2",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "b082ad86",
+   "id": "3f9d266a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "1f56dc6e",
+   "id": "98938f2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,18 +1438,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "ae4f307b",
+   "execution_count": 158,
+   "id": "0ad0318b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/gregory/opt/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/Users/gregory/opt/anaconda3/lib/python3.9/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
-    "resnet = models.resnet18(pretrained=False)"
+    "resnet = models.resnet34(pretrained=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "3e1e49c0",
+   "execution_count": 159,
+   "id": "58db5da7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "69e463ea",
+   "id": "1740884b",
    "metadata": {},
    "outputs": [
     {
@@ -1557,9 +1568,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "f350a96d",
-   "metadata": {},
+   "execution_count": 160,
+   "id": "6f3197f0",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1578,6 +1591,13 @@
        "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    )\n",
        "    (1): BasicBlock(\n",
+       "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (2): BasicBlock(\n",
        "      (conv1): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
        "      (bn1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "      (relu): ReLU(inplace=True)\n",
@@ -1604,6 +1624,20 @@
        "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
        "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    )\n",
+       "    (2): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (3): BasicBlock(\n",
+       "      (conv1): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
        "  )\n",
        "  (6): Sequential(\n",
        "    (0): BasicBlock(\n",
@@ -1624,41 +1658,51 @@
        "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
        "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    )\n",
-       "  )\n",
-       "  (7): Sequential(\n",
-       "    (0): BasicBlock(\n",
-       "      (conv1): Conv2d(256, 512, kernel_size=(3, 3), stride=(2, 2), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (2): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      (downsample): Sequential(\n",
-       "        (0): Conv2d(256, 512, kernel_size=(1, 1), stride=(2, 2), bias=False)\n",
-       "        (1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "      )\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    )\n",
-       "    (1): BasicBlock(\n",
-       "      (conv1): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn1): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (3): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "      (relu): ReLU(inplace=True)\n",
-       "      (conv2): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
-       "      (bn2): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (4): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    )\n",
+       "    (5): BasicBlock(\n",
+       "      (conv1): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn1): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "      (relu): ReLU(inplace=True)\n",
+       "      (conv2): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1), bias=False)\n",
+       "      (bn2): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
        "    )\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "backbone1"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bfdd35f",
+   "id": "c02fa666",
    "metadata": {},
    "outputs": [],
    "source": []
