--- a/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
+++ b/Jupyter_Notebooks/LOCAL COLLATE INFRENCE.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1154bbe4",
+   "id": "2a2b8c66",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c4b37b4",
+   "id": "bf996a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "325b2863",
+   "id": "190080eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2abefc17",
+   "id": "b9b98622",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6372117a",
+   "id": "e19665e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c5fc2d24",
+   "id": "45efcb43",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5ffd0481",
+   "id": "419cfd6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "05e6eed1",
+   "id": "08c059e2",
    "metadata": {},
    "outputs": [
     {
@@ -255,6 +255,10 @@
    "source": [
     "image_path= \"Jupyter_Notebooks/test_photos/0a0df4c4229b725.png\"\n",
     "image = Image.open(image_path).convert('RGB')\n",
+    "image = np.asarray(image)\n",
+    "image = cv2.bitwise_not(image)\n",
+    "\n",
+    "h, w, c = image.shape\n",
     "\n",
     "\n",
     "\n",
@@ -285,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "da44f186",
+   "id": "9c5b1871",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fa5bfbd8",
+   "id": "6ee774d2",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0baab63e",
+   "id": "9e589d2e",
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ff0145d7",
+   "id": "b5ae1a91",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0de6e905",
+   "id": "c0a81b94",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "11bc8020",
+   "id": "232ddc23",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a914d66",
+   "id": "eebb3a61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -931,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9167be",
+   "id": "7f5c4552",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -939,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9318b42",
+   "id": "54c6d22f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -947,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e3c8e9",
+   "id": "43452535",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -955,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28929c16",
+   "id": "e6f42fe6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -963,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d0c6788",
+   "id": "5aafc933",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -971,7 +975,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ba2b3b",
+   "id": "0c262a81",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -979,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45d0843c",
+   "id": "1f4cc63e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -987,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9b3b1747",
+   "id": "0f581cc7",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0cee531c",
+   "id": "2a33e339",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a2d3610c",
+   "id": "5197d915",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "bf8c1e7c",
+   "id": "66dd6abc",
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "98caf827",
+   "id": "d064902e",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9778b36e",
+   "id": "53c556ec",
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a0dfd1b1",
+   "id": "014ed3c1",
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b3952bc7",
+   "id": "0470abb8",
    "metadata": {},
    "outputs": [
     {
@@ -1789,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "95d4b10e",
+   "id": "fffba4e9",
    "metadata": {},
    "outputs": [
     {
@@ -1899,7 +1903,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "33de26cc",
+   "id": "d9eded3d",
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1995,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "2ddd13eb",
+   "id": "470bd864",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a522c163",
+   "id": "1a663116",
    "metadata": {},
    "outputs": [
     {
@@ -2081,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2c9eb7f6",
+   "id": "3e4ca251",
    "metadata": {},
    "outputs": [
     {
@@ -2127,7 +2131,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a69edaed",
+   "id": "8a58f5b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2141,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6f4197c4",
+   "id": "d5b49a04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2152,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0a0a4da7",
+   "id": "099a2d51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "86bb5437",
+   "id": "df5b6199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f304aeeb",
+   "id": "808f836b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2195,7 +2199,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cc383630",
+   "id": "6d62c44e",
    "metadata": {
     "scrolled": false
    },
@@ -2328,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a9c77d1",
+   "id": "c35f7dcc",
    "metadata": {},
    "outputs": [],
    "source": []
