added normalization and changed pos to 256by1280

--- a/Jupyter_Notebooks/LOCAL_INFERENCE_collate.ipynb
+++ b/Jupyter_Notebooks/LOCAL_INFERENCE_collate.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d47bdf43",
+   "id": "e6dc4e46",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33a0736b",
+   "id": "394c0cc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b269d3f",
+   "id": "3a5d300a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c4d30477",
+   "id": "36a11d43",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f68a75e8",
+   "id": "56bc3015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "626e8b99",
+   "id": "8a570e9d",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b966e2bb",
+   "id": "6c9648db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3f395379",
+   "id": "bb37e69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +234,47 @@
     "    print(token_to_strings(prediction))\n",
     "    print(display(Math(token_to_strings(prediction))))\n",
     "\n",
+    "\n",
+    "\n",
+    "def predict_inverted(image_path):\n",
+    "   \n",
+    "    image = Image.open(image_path).convert('RGB')\n",
+    "    image = np.asarray(image)\n",
+    "    h, w, c = image.shape\n",
+    "    image = cv2.bitwise_not(image)\n",
+    "    \n",
+    "    ratio =w / h\n",
+    "    if ratio == 0:\n",
+    "        ratio = 1 \n",
+    "    if ratio > MAX_RATIO:\n",
+    "        ratio = MAX_RATIO\n",
+    "        \n",
+    "    new_h = GOAL_HEIGHT\n",
+    "    new_w = int(new_h * ratio)\n",
+    "    image = Resize(interpolation= cv2.INTER_LINEAR,height=new_h, width= new_w, always_apply=True)(image=image)['image']\n",
+    "    print(image.shape)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    image_tensor = Image_Transforms.test_transform_with_padding(image =np.array(image))['image'][:1]\n",
+    "    print(display(transform(image_tensor)))\n",
+    "    \n",
+    "    max_H = 128\n",
+    "    max_W = 1024\n",
+    "\n",
+    "    image_tensor = F.pad(image_tensor, (0, max_W - new_w, 0, max_H - new_h), value=0)\n",
+    "\n",
+    "    \n",
+    "    print(image_tensor.shape)\n",
+    "    print(display(transform(image_tensor)))\n",
+    "    print('\\nPredicted formula:')\n",
+    "    prediction =  scripted(image_tensor.unsqueeze(0))\n",
+    "    print(token_to_strings(prediction))\n",
+    "    print(display(Math(token_to_strings(prediction))))\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "def predict_simple(image_path):\n",
     "   \n",
     "    image = Image.open(image_path).convert('RGB')\n",
@@ -261,7 +302,12 @@
     "    print(token_to_strings(prediction))\n",
     "    print(display(Math(token_to_strings(prediction))))\n",
     "\n",
-    "def predict_new(image_path):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def predict_scaled(image_path):\n",
     "    image = Image.open(image_path).convert('RGB')\n",
     "    image = np.asarray(image)\n",
     "    h, w, c = image.shape\n",
@@ -312,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "747cf93a",
+   "id": "0548e0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,9 +394,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "15027fba",
+   "id": "515e618b",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1644,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2d0c034d",
+   "id": "34aed78e",
    "metadata": {
     "scrolled": true
    },
@@ -2566,7 +2612,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "32296d41",
+   "id": "5f925e98",
    "metadata": {
     "scrolled": true
    },
@@ -3488,7 +3534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36aaa6e1",
+   "id": "d4245ce6",
    "metadata": {},
    "outputs": [],
    "source": []
