added normalization and changed pos to 256by1280

--- a/Jupyter_Notebooks/LOCAL_INFERENCE_128.ipynb
+++ b/Jupyter_Notebooks/LOCAL_INFERENCE_128.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05bad1c9",
+   "id": "356b2008",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6595a436",
+   "id": "31593182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9537fd6c",
+   "id": "7f12cba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "78326c12",
+   "id": "7b6cda5a",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6406cfed",
+   "id": "59953e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a0649f3d",
+   "id": "da96675f",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f159d33f",
+   "id": "2f44f090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "50495a69",
+   "execution_count": 17,
+   "id": "145e967e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,6 +234,46 @@
     "    print(token_to_strings(prediction))\n",
     "    print(display(Math(token_to_strings(prediction))))\n",
     "\n",
+    "\n",
+    "\n",
+    "def predict_inverted(image_path):\n",
+    "   \n",
+    "    image = Image.open(image_path).convert('RGB')\n",
+    "    image = np.asarray(image)\n",
+    "    h, w, c = image.shape\n",
+    "    image = cv2.bitwise_not(image)\n",
+    "    ratio =w / h\n",
+    "    if ratio == 0:\n",
+    "        ratio = 1 \n",
+    "    if ratio > MAX_RATIO:\n",
+    "        ratio = MAX_RATIO\n",
+    "        \n",
+    "    new_h = GOAL_HEIGHT\n",
+    "    new_w = int(new_h * ratio)\n",
+    "    image = Resize(interpolation= cv2.INTER_LINEAR,height=new_h, width= new_w, always_apply=True)(image=image)['image']\n",
+    "    print(image.shape)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    image_tensor = Image_Transforms.test_transform_with_padding(image =np.array(image))['image'][:1]\n",
+    "    print(display(transform(image_tensor)))\n",
+    "    \n",
+    "    max_H = 128\n",
+    "    max_W = 1024\n",
+    "\n",
+    "    image_tensor = F.pad(image_tensor, (0, max_W - new_w, 0, max_H - new_h), value=0)\n",
+    "\n",
+    "    \n",
+    "    print(image_tensor.shape)\n",
+    "    print(display(transform(image_tensor)))\n",
+    "    print('\\nPredicted formula:')\n",
+    "    prediction =  scripted(image_tensor.unsqueeze(0))\n",
+    "    print(token_to_strings(prediction))\n",
+    "    print(display(Math(token_to_strings(prediction))))\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "def predict_simple(image_path):\n",
     "   \n",
     "    image = Image.open(image_path).convert('RGB')\n",
@@ -261,7 +301,12 @@
     "    print(token_to_strings(prediction))\n",
     "    print(display(Math(token_to_strings(prediction))))\n",
     "\n",
-    "def predict_new(image_path):\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def predict_scaled(image_path):\n",
     "    image = Image.open(image_path).convert('RGB')\n",
     "    image = np.asarray(image)\n",
     "    h, w, c = image.shape\n",
@@ -312,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a53f5297",
+   "id": "a6ffd62d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,10 +392,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "445c09ff",
+   "execution_count": 18,
+   "id": "cf8c0c3f",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1644,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0e187135",
+   "id": "fbdd93ba",
    "metadata": {
     "scrolled": true
    },
@@ -2565,8 +2610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "4d9b8998",
+   "execution_count": 19,
+   "id": "c6f1731f",
    "metadata": {
     "scrolled": true
    },
@@ -3482,13 +3527,13 @@
    ],
    "source": [
     "for image in IMAGES:\n",
-    "    predict_new(image)"
+    "    predict_scaled(image)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a43c0953",
+   "id": "1e52b71e",
    "metadata": {},
    "outputs": [],
    "source": []
