serveless api fix

--- a/Jupyter_Notebooks/LOCAL_INFERENCE_128.ipynb
+++ b/Jupyter_Notebooks/LOCAL_INFERENCE_128.ipynb
@@ -398,7 +398,7 @@
    "execution_count": 10,
    "id": "515e618b",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
